Rename Map to Demo in links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<nav class="fh5co-main-nav">
 					<ul>
 						<li class="fh5co-active"><a href="index.html"><span>Home</span></a></li>
-						<li><a href="map.html"><span>Map</span></a></li>
+						<li><a href="map.html"><span>Demo</span></a></li>
 						<li><a href="about.html"><span>About Us</span></a></li>
 					</ul>
 				</nav>
