--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  <!-- 
+  <!--
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	FREE HTML5 TEMPLATE
 	DESIGNED & DEVELOPED by FreeHTML5.co
-		
+
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
 	Twitter: 		http://twitter.com/fh5co
@@ -42,10 +42,10 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
-	
+
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<!-- Bootstrap  -->
@@ -64,7 +64,7 @@
 
 	</head>
 	<body>
-	
+
 	<div id="fh5co-wrap">
 		<header id="fh5co-header">
 			<div class="container">
@@ -99,7 +99,7 @@
 						<h2>Our History</h2>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. </p>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						
+
 					</div>
 					<div class="col-md-7">
 						<img src="images/hero_1.jpg" alt="Free HTML5 by FreeHTML5.co" class="img-responsive">
@@ -126,10 +126,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-						<h3>Athan Smith</h3>
-						<h4>Co-Founder, CEO</h4>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+						<img src="images/laurie_bio_pic.jpg" alt="Team Captain" class="img-responsive">
+						<h3>Laurie Nicol</h3>
+						<h4>Team Captain</h4>
+						<p>Laurie loves to play the bagpipes and his haunting tunes can be heard echoing around the parks of St. Lucia</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -152,10 +152,10 @@
 						</ul>
 					</div>
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/person4.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-						<h3>Yanna Kuzuki</h3>
-						<h4>Co-Founder, Principal</h4>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+						<img src="images/jamie_bio_pic.JPG" alt="JUnit" class="img-responsive">
+						<h3>Jamie Cook</h3>
+						<h4>Hacker #2</h4>
+						<p>Jamie loves cycling and sustainable transport. He has a red push bike and two amazing daughters.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
@@ -196,7 +196,7 @@
 					</div>
 					<div class="col-md-6">
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
-						
+
 					</div>
 					<div class="col-md-6">
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
@@ -244,7 +244,7 @@
 			</div>
 		</div>
 	</footer>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -260,4 +260,3 @@
 
 	</body>
 </html>
-
