Flesh out index with jc's stuff

--- a/index.html
+++ b/index.html
@@ -97,10 +97,72 @@
 				<div class="row">
 					<div class="col-md-5">
 						<h2>Finding the perfect location</h2>
-              <p>Put the content here</p>
+
+<p>Starting a new restaurant is hard - there are so many things to consider:
+  <ul>
+<li> Where do you get the best staff? </li>
+<li> Have you organised appropriate insurance?</li>
+<li> Is the menu going to be a hit?</li>
+</ul></p>
+
+<p>But thankfully, choosing where to situate your new business just got easier with PedEstimate.</p> 
+
+<p>PedEstimate allows you to easily examine a range of potential locations to evaluate the amount 
+of foot fall traffic in the vicinity. It also enables you to easily see the surrounding drivers 
+of this traffic such as office space, retail space, restaurants and residential accomodation.</p>
+
+<p>Our simple to use web interface makes the process of site selection a quick and easy process. 
+Checkout the demo below for more details.</p>
 							<p>For the nitty gritty, check out our <a href="http://github.com/jamiecook/pedestimate">github repo.</a></p>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
+						<div class="fh5co-intro fh5co-table-cell">
+							<h1 class="text-center">Behind the curtain</h1>
+							<p>How the sausage gets made</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="fh5co-section">
+			<div class="container">
+
+				<div class="row">
+					<div class="col-md-12">
+						<div class="row">
+              <div class="col-md-6">
+                <h2>Some details on how all this works</h2>
+              </div>
+						</div>
+					</div>
+					<div class="col-md-6">
+            <p>The core concept of PedEstimate is to use a predictive model to determine the likely footfall traffic based on a number of known predictors such as:
+              <ul>
+                <li>The amount of nearby office space (within 100, 200 and 300 meters)</li>
+                <li>The amount of nearby retail space </li>
+                <li>The number of competing dining establishments</li>
+                <li>The nearby employment density</li>
+              </ul>
+            </p>
+
+            <p>
+              Using cutting edge estimation techniques we are able to generate models which predict the pedestrian traffic at any location within the city.
+            </p>
+
+            <a href="images/qgis.png"><img src="images/qgis.png" width="800px" height="600px" alt="Screen cap of QGIS work"/></a>
+
+					</div>
+				</div>
+
 			</div>
 		</div>
 
