--- a/about.html
+++ b/about.html
@@ -92,12 +92,12 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="fh5co-section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/laurie_bio_pic.jpg" alt="Team Captain" class="img-responsive">
+						<img src="images/laurie_biopic.jpg" alt="Team Captain" class="img-responsive">
 						<h3>Laurie Nicol</h3>
 						<h4>Team Captain</h4>
 						<p>Laurie loves to play the bagpipes and his haunting tunes can be heard echoing around the parks of St. Lucia</p>
