--- a/about.html
+++ b/about.html
@@ -71,9 +71,8 @@
 				<nav class="fh5co-main-nav">
 					<ul>
 						<li><a href="index.html"><span>Home</span></a></li>
-						<li><a href="services.html"><span>Services</span></a></li>
-						<li class="fh5co-active"><a href="about.html"><span>About</span></a></li>
-						<li><a href="contact.html"><span>Contact</span></a></li>
+						<li><a href="map.html"><span>Demo</span></a></li>
+						<li class="fh5co-active"><a href="about.html"><span>About Us</span></a></li>
 					</ul>
 				</nav>
 			</div>
