--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/laurie_biopic.jpg" alt="Team Captain" class="img-responsive">
+						<img src="images/laurie_biopic.jpg" alt="Team Captain" class="img-responsive" style="width:250px;height:400px;">
 						<h3>Laurie Nicol</h3>
 						<h4>Team Captain</h4>
 						<p>Laurie loves to play the bagpipes and his haunting tunes can be heard echoing around the parks of St. Lucia</p>
@@ -109,7 +109,7 @@
 						</ul>
 					</div>
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/macca_bio_pic.jpg" alt="Hacker in chief" class="img-responsive">
+						<img src="images/macca_bio_pic.jpg" alt="Hacker in chief" class="img-responsive" style="width:300px;height:400px;">
 						<h3>Andrew "Macca" McCluskey</h3>
 						<h4>Hacker #2</h4>
 						<p>With an ability to work through the strongest of hangovers, Macca is a die hard hacker who makes his own keyboards while enjoying some film noir.</p>
@@ -122,7 +122,7 @@
 						</ul>
 					</div>
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/jamie_bio_pic.JPG" alt="JUnit" class="img-responsive">
+						<img src="images/jamie_bio_pic.JPG" alt="JUnit" class="img-responsive" style="width:300px;height:400px;">
 						<h3>Jamie Cook</h3>
 						<h4>Hacker #2</h4>
 						<p>Jamie loves cycling and sustainable transport. He has a red push bike and two amazing daughters.</p>
