Fix macca's bio

--- a/about.html
+++ b/about.html
@@ -109,10 +109,10 @@
 						</ul>
 					</div>
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/macca_bio_pic.jpg" alt="Hacker in chief" class="img-responsive">
+						<img src="images/macca_biopic.jpg" alt="Hacker in chief" class="img-responsive">
 						<h3>Andrew "Macca" McCluskey</h3>
-						<h4>Hacker #2</h4>
-						<p>With an ability to work through the strongest of hangovers, Macca is a die hard hacker who makes his own keyboards while enjoying some film noir.</p>
+						<h4>Hacker #3</h4>
+						<p>Macca lives in the bush, likes being under water, and plays with data and computers for fun and profit.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>
