--- a/about.html
+++ b/about.html
@@ -138,45 +138,6 @@
 			</div>
 		</div>
 
-
-		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
-						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Keep it simple</h1>
-							<p>Made with love by the fine folks at <a href="http://freehtml5.co">FreeHTML5.co</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="fh5co-section">
-			<div class="container">
-
-				<div class="row">
-					<div class="col-md-12">
-						<div class="row">
-							<div class="col-md-6">
-								<h2>Start A Project With Us Now!</h2>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
-
-					</div>
-					<div class="col-md-6">
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-						<p><a href="#" class="btn btn-primary">Get started now!</a></p>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
 	</div> <!-- END fh5co-wrap -->
 
 
@@ -185,7 +146,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h3>About Us</h3>
-					<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p>
+					<p>Transport Hackery</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
 					<h3>Quick Links</h3>
@@ -209,7 +170,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 fh5co-copyright text-center">
-					<p><small>&copy; 2016 Free HTML5 Simple. All Rights Reserved. </small> <small>Made with care by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></small></p>
+					<p><small>&copy; Christopher Walkin'. </small> <small>Made with care by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></small></p>
 				</div>
 			</div>
 		</div>
