--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-    <title> Predict your pedestrian traffic | Pedestimate </title>
+    <title> Predict your pedestrian traffic | PedEstimate </title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.21.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.21.0/mapbox-gl.css' rel='stylesheet' />
@@ -105,28 +105,33 @@
 <li> Is the menu going to be a hit?</li>
 </ul></p>
 
-<p>But thankfully, choosing where to situate your new business just got easier with PedEstimate.</p> 
+<p>But thankfully, choosing where to situate your new business just got easier with PedEstimate.</p>
 
-<p>PedEstimate allows you to easily examine a range of potential locations to evaluate the amount 
-of foot fall traffic in the vicinity. It also enables you to easily see the surrounding drivers 
+<p>PedEstimate allows you to easily examine a range of potential locations to evaluate the amount
+of foot fall traffic in the vicinity. It also enables you to easily see the surrounding drivers
 of this traffic such as office space, retail space, restaurants and residential accomodation.</p>
 
-<p>Our simple to use web interface makes the process of site selection a quick and easy process. 
+<p>Our simple to use web interface makes the process of site selection a quick and easy process.
 Checkout the demo below for more details.</p>
 							<p>For the nitty gritty, check out our <a href="http://github.com/jamiecook/pedestimate">github repo.</a></p>
 					</div>
+          <div class="col-md-7">
+            <img src="images/demo.png" class="img-responsive"/>
+          </div>
 				</div>
 			</div>
 		</div>
 
-		<div class="fh5co-parallax" style="background-image: url(images/hero_3.jpg);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-parallax" style="background-image: url(images/curtain.png);" data-stellar-background-ratio="0.9">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
-						<div class="fh5co-intro fh5co-table-cell">
-							<h1 class="text-center">Behind the curtain</h1>
-							<p>How the sausage gets made</p>
+						<div class="fh5co-intro fh5co-table-cell" >
+              <div style="background-color: rgba(33,33,33,0.6); border-radius: 20px;">
+  							<h1 class="text-center">Behind the curtain</h1>
+  							<p >How the sausage gets made</p>
+              </div>
 						</div>
 					</div>
 				</div>
@@ -157,10 +162,10 @@ Checkout the demo below for more details.</p>
             <p>
               Using cutting edge estimation techniques we are able to generate models which predict the pedestrian traffic at any location within the city.
             </p>
-
-            <a href="images/qgis.png"><img src="images/qgis.png" width="800px" height="600px" alt="Screen cap of QGIS work"/></a>
-
 					</div>
+          <div class:"col-md-7">
+            <a href="images/qgis.png"><img src="images/qgis.png" class="img-responsive" style="width: 500px; height:350px" alt="Screen cap of QGIS work"/></a>
+          </div>
 				</div>
 
 			</div>
