Fix about on home page

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Checkout the demo below for more details.</p>
 			<div class="row">
 				<div class="col-md-4">
 					<h3>About Us</h3>
-					<p>She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains.</p>
+					<p>All your transport budget are belong to us.</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
 					<h3>Quick Links</h3>
