--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 					<div class="col-md-4 fh5co-staff">
 						<img src="images/macca_biopic.jpg" alt="Hacker in chief" class="img-responsive" style="width:300px;height:400px;">
 						<h3>Andrew "Macca" McCluskey</h3>
-						<h4>Hacker #3</h4>
+						<h4>Hacker #1</h4>
 						<p>Macca lives in the bush, likes being under water, and plays with data and computers for fun and profit.</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-google"></i></a></li>
@@ -151,20 +151,9 @@
 				<div class="col-md-3 col-md-push-1">
 					<h3>Quick Links</h3>
 					<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Products</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 col-md-push-1">
-					<h3>Follow Us</h3>
-					<ul class="fh5co-social">
-						<li><a href="#"><i class="icon-twitter"></i> <span>Twitter</span></a></li>
-						<li><a href="#"><i class="icon-facebook"></i> <span>Facebook</span></a></li>
-						<li><a href="#"><i class="icon-instagram"></i> <span>Instagram</span></a></li>
-						<li><a href="#"><i class="icon-google"></i> <span>Google Plus</span></a></li>
+						<li><a href="map.html">Demo</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="http://github.com/jamiecook/pedestimate">Github</a></li>
 					</ul>
 				</div>
 			</div>
