--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						<li class="fh5co-active"><a href="index.html"><span>Home</span></a></li>
 						<li><a href="map.html"><span>Demo</span></a></li>
 						<li><a href="about.html"><span>About Us</span></a></li>
+						<li><a href="https://github.com/jamiecook/pedestimate"><span>Github</span></a></li>
 					</ul>
 				</nav>
 			</div>
