Update mapbox access token

--- a/map.html
+++ b/map.html
@@ -102,7 +102,7 @@ pre > p {
 
 <script>
 // Mapbox access id's
-mapboxgl.accessToken = 'pk.eyJ1IjoibGF1cmVuY2VuaWNvbCIsImEiOiJjaW8zdWNwaW8wMWN1dzNramw2ZGVwZDIxIn0.ypTc0f_ote92hBKe3BzKuw';
+mapboxgl.accessToken = 'pk.eyJ1IjoibGF1cmVuY2VuaWNvbCIsImEiOiJjajE0N3h5NXQwMDM0MzhvZDR4djBsYTVpIn0.l1jPE_NfN3uYDhPIRGe__Q';
 
 // Foursquare access id's
 var CLIENT_ID = 'SIHWPNAB1YHPCXYMHXK4ZHSF1DFOQ4H5EBU4QLWE02M0LNFT';
