--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 fh5co-staff">
-						<img src="images/laurie_biopic.jpg" alt="Team Captain" class="img-responsive" style="width:250px;height:400px;">
+						<img src="images/laurie_biopic.svg" alt="Team Captain" class="img-responsive" style="width:250px;height:400px;">
 						<h3>Laurie Nicol</h3>
 						<h4>Team Captain</h4>
 						<p>Laurie loves to play the bagpipes and his haunting tunes can be heard echoing around the parks of St. Lucia</p>
